--- a/style.css
+++ b/style.css
@@ -127,3 +127,9 @@ nav ul li{
     opacity: 0;
     transition: opacity 0.4s ease-in;
 }
+
+@media (max-width:576px){
+ .musicItemContainer{
+     width: 336px
+ }
+}
